Moved some Abstraction to Action Class

--- a/R3peat.csproj
+++ b/R3peat.csproj
@@ -82,6 +82,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ActionType.cs" />
     <Compile Include="ICoordinateConversion.cs" />
     <Compile Include="Pause.cs" />
     <Compile Include="WPFCoordinateConversion.cs" />
