--- a/R3peat.csproj
+++ b/R3peat.csproj
@@ -153,6 +153,12 @@
     <PackageReference Include="ModernWpfUI">
       <Version>0.9.6</Version>
     </PackageReference>
+    <PackageReference Include="NHotkey">
+      <Version>2.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="NHotkey.Wpf">
+      <Version>2.1.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
