--- a/R3peat.csproj
+++ b/R3peat.csproj
@@ -80,6 +80,9 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Compile Include="HotkeyEditorWindow.xaml.cs">
+      <DependentUpon>HotkeyEditorWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Macro.cs" />
     <Compile Include="NameAndDescriptionProperty.cs" />
     <Compile Include="NameProperty.cs" />
@@ -96,6 +99,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="WPFCoordinateConversion.cs" />
+    <Page Include="HotkeyEditorWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MacroEditorWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
