--- a/R3peat.csproj
+++ b/R3peat.csproj
@@ -83,6 +83,7 @@
     <Compile Include="src\Actions\ButtonPress.cs" />
     <Compile Include="src\Actions\MouseButton.cs" />
     <Compile Include="src\Actions\TextEntry.cs" />
+    <Compile Include="src\Hotkey.cs" />
     <Compile Include="src\Incrementers\HotkeyIncrementer.cs" />
     <Compile Include="src\HotkeyMode.cs" />
     <Compile Include="src\HotkeyObject.cs" />
@@ -160,12 +161,6 @@
     </PackageReference>
     <PackageReference Include="ModernWpfUI">
       <Version>0.9.6</Version>
-    </PackageReference>
-    <PackageReference Include="NHotkey">
-      <Version>2.1.0</Version>
-    </PackageReference>
-    <PackageReference Include="NHotkey.Wpf">
-      <Version>2.1.0</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
