Added Run Application Action type

--- a/R3peat.csproj
+++ b/R3peat.csproj
@@ -83,6 +83,7 @@
     <Compile Include="src\Actions\ButtonPress.cs" />
     <Compile Include="src\Actions\KeyCombination.cs" />
     <Compile Include="src\Actions\MouseButton.cs" />
+    <Compile Include="src\Actions\RunApplication.cs" />
     <Compile Include="src\Actions\TextEntry.cs" />
     <Compile Include="src\Hotkey.cs" />
     <Compile Include="src\Incrementers\HotkeyIncrementer.cs" />
