--- a/R3peat.csproj
+++ b/R3peat.csproj
@@ -82,6 +82,7 @@
     </Page>
     <Compile Include="src\Actions\ButtonPress.cs" />
     <Compile Include="src\Actions\KeyCombination.cs" />
+    <Compile Include="src\Actions\MediaControl.cs" />
     <Compile Include="src\Actions\MouseButton.cs" />
     <Compile Include="src\Actions\RunApplication.cs" />
     <Compile Include="src\Actions\TextEntry.cs" />
