Added two new actions to list

--- a/R3peat.csproj
+++ b/R3peat.csproj
@@ -80,9 +80,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Compile Include="src\Actions\ButtonPress.cs" />
+    <Compile Include="src\Actions\ButtonPress\ButtonPress.cs" />
+    <Compile Include="src\Actions\ButtonPress\ButtonPressBuilder.cs" />
     <Compile Include="src\Actions\KeyCombination.cs" />
-    <Compile Include="src\Actions\MediaControl.cs" />
+    <Compile Include="src\Actions\MediaControl\MediaControl.cs" />
+    <Compile Include="src\Actions\MediaControl\MediaControlBuilder.cs" />
     <Compile Include="src\Actions\MouseButton.cs" />
     <Compile Include="src\Actions\RunApplication.cs" />
     <Compile Include="src\Actions\TextEntry.cs" />
