--- a/R3peat.csproj
+++ b/R3peat.csproj
@@ -52,6 +52,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -87,6 +89,8 @@
     <Compile Include="src\Actions\MediaControl\MediaControlBuilder.cs" />
     <Compile Include="src\Actions\MouseButton.cs" />
     <Compile Include="src\Actions\RunApplication.cs" />
+    <Compile Include="src\Actions\Screenshot\Screenshot.cs" />
+    <Compile Include="src\Actions\Screenshot\ScreenshotBuilder.cs" />
     <Compile Include="src\Actions\TextEntry.cs" />
     <Compile Include="src\Hotkey.cs" />
     <Compile Include="src\Incrementers\HotkeyIncrementer.cs" />
